Fixed UI alignment

--- a/public/css/styleFilters.css
+++ b/public/css/styleFilters.css
@@ -422,7 +422,7 @@ a:not([href]):not([tabindex]){
 
 #all-followers-scatterplot{
   width: 318px;
-  height: 200px;
+  height: 120px;
   text-align: center;
 }
 
@@ -480,6 +480,4 @@ a:not([href]):not([tabindex]){
   height: 180px;
   border-radius: 50%;
   padding: 0;
-  text-align: center;
-  vertical-align: middle;
 }
